[package]
name = "run-every-road"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.16"
geojson = { version = "0.21", features = ["geo-types"] }
geo-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
