[package]
name = "run-every-road"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { version = "0.16", features = ["use-serde"] }
geojson = { version = "0.21", features = ["geo-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
